# nanosaur_simulations

./: LICENSE  README.md
.github/: FUNDING.md
nanosaur_gazebo/: CMakeLists.txt  package.xml
nanosaur_gazebo/launch/: gazebo.launch.py  nanosaur_gazebo.launch.py  robot_state_publisher.launch.py
nanosaur_gazebo/models/books/: books.sdf  model.config
nanosaur_gazebo/models/cube_cozmo/: model.config
nanosaur_gazebo/models/cube_cozmo/meshes/: cube_colored.dae
nanosaur_gazebo/models/desktop/: desktop.sdf  model.config
nanosaur_gazebo/models/desktop/meshes/: model.dae
nanosaur_gazebo/params/: spawn_robot.yml
nanosaur_gazebo/urdf/: diff_drive.gazebo.xacro  nanosaur.gazebo.xacro  nanosaur.urdf.xacro
nanosaur_gazebo/urdf/sensors/: camera.gazebo.xacro  realsense.gazebo.xacro  wide.gazebo.xacro  zed.gazebo.xacro  zedmini.gazebo.xacro
nanosaur_gazebo/worlds/: cozmo.world
nanosaur_ignition/: CMakeLists.txt  package.xml  setup.cfg  setup.py
nanosaur_ignition/config/: nanosaur.yaml
nanosaur_ignition/gui/: gui.config
nanosaur_ignition/launch/: control.launch.py  ignition.launch.py  robot_state_publisher.launch.py  ros_gz_bridge.launch.py  ros_ign_bridge.launch.py
nanosaur_ignition/nanosaur_ignition/: __init__.py  republisher.py
nanosaur_ignition/urdf/: diff_drive.gazebo.xacro  diff_drive.ignition.xacro  mecanum.ignition.xacro  mecanum_drive.ignition.xacro  nanosaur.ignition.xacro  ros2_control.ignition.xacro
nanosaur_ignition/urdf/sensors/: camera.ignition.xacro  realsense.ignition.xacro
nanosaur_ignition/worlds/: empty.sdf
nanosaur_isaac_sim/: CMakeLists.txt  LICENSE  package.xml  setup.cfg  setup.py
nanosaur_isaac_sim/launch/: controller.launch.py  isaac_sim.launch.py  robot_state_publisher.launch.py  server_is.launch.py
nanosaur_isaac_sim/nanosaur_isaac_sim/: __init__.py  isaac_sim_manager.py
nanosaur_isaac_sim/scripts/: camera_graphs.py  launcher.sh  nanosaur_action_graphs.py  nanosaur_isaac_sim_sa.py  usdconverter.sh
nanosaur_isaac_sim/urdf/: nanosaur.isaac.xacro
nanosaur_simulations/: CMakeLists.txt  package.xml
nanosaur_simulations/launch/: robot_state_publisher.launch.py
nanosaur_simulations/urdf/: diff_drive.gazebo.xacro  nanosaur.urdf.xacro
nanosaur_simulations/urdf/sensors/: imu.gazebo.xacro
nanosaur_worlds/: CMakeLists.txt  package.xml
nanosaur_worlds/params/: spawn_robot.yml
nanosaur_worlds/scripts/: get_coordinate.py
(+27 files in other folders)
