cmake_minimum_required(VERSION 3.5)

project(nanosaur_simulations)

################################################################################
# Find ament packages and libraries for ament and system dependencies
################################################################################
find_package(ament_cmake REQUIRED)

################################################################################
# Macro for ament package
################################################################################
ament_package()